Optimization + fixes for navigating uses